--- a/sandbox/build.gradle
+++ b/sandbox/build.gradle
@@ -1,3 +1,13 @@
 apply plugin: 'java'
 apply plugin: 'application'
 mainClassName = "java.nik.and.MyFirstProgram"
+
+repositories{
+    mavenCentral()
+}
+
+dependencies{
+    compile 'org.testng:testng:7.0.0'
+
+
+}
